# cmake-test-lib

./: CMakeLists.txt  hello.cxx  readme.md
libhello/: hello.h
